--- a/pages/trips/trip.module.css
+++ b/pages/trips/trip.module.css
@@ -177,6 +177,7 @@
   font-size: 1em;
   font-weight: 500;
   font-style: italic;
+  word-wrap: break-word;
 }
 
 .paper {
@@ -186,6 +187,7 @@
   padding-top: 0.25em;
   background-color: white;
   box-shadow: 0px 0px 3px 0px #888;
+  word-wrap: break-word;
 }
 
 .paper::before {
